--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,3 +1,6 @@
+{% load bootstrap4 %}
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -6,10 +9,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Index</title>
+    {% bootstrap_css %}
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 
 <body>
-    <h1>Index</h1>
+    <div class="container">
+        <h1>Produtos</h1>
+        <div class="mt-4">
+
+            <table class="table table-dark">
+                <thead>
+                    <tr>
+                        <th scope="col"></th>
+                        <th scope="col">Nome</th>
+                        <th scope="col">Preço</th>
+                        <th scope="col">Estoque</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for produto in produtos %}
+                    <tr>
+                        <td>{{ produto.id }}</td>
+                        <td><a href="#modal{{produto.id}}" data-toggle="modal">{{ produto.nome }}</a></td>
+                        <td>{{ produto.preco }}</td>
+                        <td>{{ produto.estoque }}</td>
+                    </tr>
+                    <div class="modal fade bd-example-modal-lg show" id="modal{{produto.id}}" role="dialog">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body" id="dynamic-content">
+                                    <img src="{{ produto.imagem.url }}" class="img-fluid" alt="{{ produto.nome }}">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        <div class="row">
+            <div class="col">
+                <a href="{% url 'produto' %}">
+                    <button class="btn btn-primary">Cadastrar Produto</button>
+                </a>
+            </div>
+        </div>
+    </div>
+    {% bootstrap_javascript jquery='full' %}
 </body>
 
 </html>
